--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hospital del Corazón</title>
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <div class="header__interior">
+      <div class="container header__interior">
         <div class="header__logo">
           <a href="/" class="header__home">
             <img
@@ -24,191 +23,213 @@
               id="logo"
               class="header__logo"
             />
-            <h1 class="header__titulo">Hospital del Corazón</h1></a
-          >
+            <h1 class="lg:fs-1 header__titulo">Hospital del Corazón</h1>
+          </a>
         </div>
 
         <nav class="navegacion">
           <ul class="navegacion__enlaces">
             <li><a href="/">Home</a></li>
             <li>
-              <a href="/pages/equipo-medico.html">Nuestro Equipo Médico </a>
+              <a href="/pages/equipo-medico.html">Nuestro Equipo Médico</a>
             </li>
             <li><a href="/pages/contacto.html">Contacto</a></li>
           </ul>
         </nav>
 
-        <button class="button active">Reservar cita</button>
+        <button class="button active btn">Reservar cita</button>
       </div>
     </header>
 
-    <main>
-      <div class="container">
-        <div class="bienvenida">
-          <article class="bienvenida__encabezado">
-            <h2 class="bienvenida__titulo">¡Bienvenidos al Hospital del Corazón! </h2>
-            <p>
-               Nos enorgullece ser un
-              centro de excelencia en salud cardiovascular, dedicado a
-              proporcionar atención integral y de calidad. Nuestra misión es
-              cuidar y mejorar la salud de nuestros pacientes, ofreciendo
-              tratamientos innovadores y un enfoque humano. Visualizamos un
-              futuro donde cada corazón recibe la atención que merece,
-              promoviendo bienestar y calidad de vida. Gracias por elegirnos
-              para acompañarte en tu camino hacia la salud.
-            </p>
-          </article>
-
-          <aside class="bienvenida__aside">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae,
-            doloribus accusantium voluptates velit blanditiis doloremque numquam
-            quis exercitationem porro libero recusandae illum optio consectetur
-            neque aliquid corporis praesentium tempore voluptatibus.
-          </aside>
-        </div>
-
-        <section class="nuestro-equipo">
-          <h2 class="nuestro-equipo__titulo">Sobre nuestro equipo</h2>
-          <p class="nuestro-equipo__infor">
-            En el Hospital del Corazón, contamos con un equipo de profesionales
-            altamente capacitados y dedicados a brindar la mejor atención médica
-            a nuestros pacientes. Nuestro personal está compuesto por médicos,
-            enfermeras y especialistas que trabajan en conjunto para garantizar
-            un enfoque integral en la salud.
+    <main class="container">
+      <section class="bienvenida">
+        <article class="bienvenida__encabezado">
+          <h2 class="bienvenida__titulo">
+            ¡Bienvenidos al Hospital del Corazón!
+          </h2>
+          <p>
+            Nos enorgullece ser un centro de excelencia en salud cardiovascular,
+            dedicado a proporcionar atención integral y de calidad. Nuestra
+            misión es cuidar y mejorar la salud de nuestros pacientes,
+            ofreciendo tratamientos innovadores y un enfoque humano.
+            Visualizamos un futuro donde cada corazón recibe la atención que
+            merece, promoviendo bienestar y calidad de vida. Gracias por
+            elegirnos para acompañarte en tu camino hacia la salud.
           </p>
-        </section>
+        </article>
 
-        <section>
-          <h2 class="servicios__titulo">Servicios Médicos del Hospital del Corazón</h2>
+        <aside class="bienvenida__aside">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae,
+          doloribus accusantium voluptates velit blanditiis doloremque numquam
+          quis exercitationem porro libero recusandae illum optio consectetur
+          neque aliquid corporis praesentium tempore voluptatibus.
+        </aside>
+      </section>
 
-          <div class="servicios">
-            <div class="servicios__infor">
-              <img
-                src="assets/img/servicios/cardiologia.png"
-                alt="Ícono de consulta"
-              />
-              <div class="servicios__detalles">
-                <h3>Consultas Cardiológicas</h3>
-                <p>
-                  Ofrecemos consultas especializadas con cardiólogos
-                  experimentados que evaluarán tu salud cardiovascular,
-                  realizarán diagnósticos precisos y diseñarán planes de
-                  tratamiento personalizados.
-                </p>
-              </div>
-            </div>
+      <section class="nuestro-equipo">
+        <h2 class="nuestro-equipo__titulo">Sobre nuestro equipo</h2>
+        <p class="nuestro-equipo__infor">
+          En el Hospital del Corazón, contamos con un equipo de profesionales
+          altamente capacitados y dedicados a brindar la mejor atención médica a
+          nuestros pacientes. Nuestro personal está compuesto por médicos,
+          enfermeras y especialistas que trabajan en conjunto para garantizar un
+          enfoque integral en la salud.
+        </p>
+      </section>
 
-            <div class="servicios__infor">
-              <img
-                src="assets/img/servicios/cardiologia.png"
-                alt="Ícono de consulta"
-              />
-              <div class="servicios__detalles">
-                <h3>Consultas Cardiológicas</h3>
-                <p>
-                  Ofrecemos consultas especializadas con cardiólogos
-                  experimentados que evaluarán tu salud cardiovascular,
-                  realizarán diagnósticos precisos y diseñarán planes de
-                  tratamiento personalizados.
-                </p>
-              </div>
-            </div>
+      <!-- SERVICIOS -->
+      <section id="servicios" class="servicios">
+        <h2 class="servicios__titulo">
+          Servicios Médicos del Hospital del Corazón
+        </h2>
 
-            <div class="servicios__infor">
-              <img
-                src="assets/img/servicios/cardiologia.png"
-                alt="Ícono de consulta"
-              />
-              <div class="servicios__detalles">
-                <h3>Consultas Cardiológicas</h3>
-                <p>
-                  Ofrecemos consultas especializadas con cardiólogos
-                  experimentados que evaluarán tu salud cardiovascular,
-                  realizarán diagnósticos precisos y diseñarán planes de
-                  tratamiento personalizados.
-                </p>
-              </div>
+        <div class="row">
+          <div class="servicios__infor col-12 col-md-6">
+            <img
+              src="assets/img/servicios/cardiologia.png"
+              alt="Ícono de consulta"
+            />
+            <div class="servicios__detalles">
+              <h3 class="md:fs-1 fs-3">Consultas Cardiológicas</h3>
+              <p>
+                Ofrecemos consultas especializadas con cardiólogos
+                experimentados que evaluarán tu salud cardiovascular, realizarán
+                diagnósticos precisos y diseñarán planes de tratamiento
+                personalizados.
+              </p>
             </div>
           </div>
-        </section>
-        <h2 class="testimonios__titulo">Testimonios de Pacientes</h2>
-        <section class="testimonios">
-          <div class="testimonios__infor">
-            <p><strong>María G.</strong></p>
-            <p>
-              "La atención en el Hospital del Corazón fue excepcional. Desde mi
-              primera consulta hasta la rehabilitación, me sentí apoyada en cada
-              paso. Gracias a su equipo, hoy disfruto de una vida más
-              saludable."
-            </p>
+
+          <div class="servicios__infor col-12 col-md-6">
+            <img
+              src="assets/img/servicios/servicio-cardiologia.jpg"
+              alt="Ícono de consulta"
+            />
+            <div class="servicios__detalles">
+              <h3 class="md:fs-1 fs-3">Consultas Cardiológicas</h3>
+              <p>
+                Ofrecemos consultas especializadas con cardiólogos
+                experimentados que evaluarán tu salud cardiovascular, realizarán
+                diagnósticos precisos y diseñarán planes de tratamiento
+                personalizados.
+              </p>
+            </div>
           </div>
 
-          <div class="testimonios__infor">
-            <p><strong>José L.</strong></p>
-            <p>
-              "No puedo agradecer lo suficiente al personal del hospital. Su
-              profesionalismo y dedicación me dieron la confianza que necesitaba
-              durante mi tratamiento. Me siento como nuevo y listo para seguir
-              adelante."
-            </p>
+          <div class="servicios__infor col-12 col-md-6">
+            <img
+              src="assets/img/servicios/medicina-urgencia.jpg"
+              alt="Ícono de consulta"
+            />
+            <div class="servicios__detalles">
+              <h3 class="md:fs-1 fs-3">Consultas Cardiológicas</h3>
+              <p>
+                Ofrecemos consultas especializadas con cardiólogos
+                experimentados que evaluarán tu salud cardiovascular, realizarán
+                diagnósticos precisos y diseñarán planes de tratamiento
+                personalizados.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- TESTIMONIOS -->
+      <section class="testimonios">
+        <h2 class="testimonios__titulo text-center mb-4">
+          Testimonios de Pacientes
+        </h2>
+        <div class="row">
+          <div class="col-lg-3 col-12 mb-4">
+            <div class="testimonios__infor p-3 border rounded bg-light">
+              <p><strong>María G.</strong></p>
+              <p>
+                "La atención en el Hospital del Corazón fue excepcional. Desde
+                mi primera consulta hasta la rehabilitación, me sentí apoyada en
+                cada paso. Gracias a su equipo, hoy disfruto de una vida más
+                saludable."
+              </p>
+            </div>
           </div>
 
-          <div class="testimonios__infor">
-            <p><strong>Ana R.</strong></p>
-            <p>
-              "El Hospital del Corazón superó mis expectativas. La atención
-              personalizada y el seguimiento constante hicieron toda la
-              diferencia en mi recuperación. ¡Altamente recomendado!"
-            </p>
+          <div class="col-lg-3 col-12 mb-4">
+            <div class="testimonios__infor p-3 border rounded bg-light">
+              <p><strong>José L.</strong></p>
+              <p>
+                "No puedo agradecer lo suficiente al personal del hospital. Su
+                profesionalismo y dedicación me dieron la confianza que
+                necesitaba durante mi tratamiento. Me siento como nuevo y listo
+                para seguir adelante."
+              </p>
+            </div>
           </div>
 
-          <div class="testimonios__infor">
-            <p><strong>Carlos T.</strong></p>
-            <p>
-              "Tuve una experiencia increíble. El equipo médico no solo es
-              competente, sino también muy empático. Me ayudaron a entender mi
-              condición y a tomar decisiones informadas sobre mi salud."
-            </p>
+          <div class="col-lg-3 col-12 mb-4">
+            <div class="testimonios__infor p-3 border rounded bg-light">
+              <p><strong>Ana R.</strong></p>
+              <p>
+                "El Hospital del Corazón superó mis expectativas. La atención
+                personalizada y el seguimiento constante hicieron toda la
+                diferencia en mi recuperación. ¡Altamente recomendado!"
+              </p>
+            </div>
           </div>
-        </section>
-      </div>
+
+          <div class="col-lg-3 col-12 mb-4">
+            <div class="testimonios__infor p-3 border rounded bg-light">
+              <p><strong>Carlos T.</strong></p>
+              <p>
+                "Tuve una experiencia increíble. El equipo médico no solo es
+                competente, sino también muy empático. Me ayudaron a entender mi
+                condición y a tomar decisiones informadas sobre mi salud."
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- FOOTER -->
+      <footer>
+        <div class="row footer__content">
+          <div class="col-md-4">
+            <h3>Hospital del Corazón</h3>
+            <div class="footer__logo">
+              <ul class="footer__enlaces list-unstyled">
+                <li>
+                  <a href="pages/equipo-medico.html">Nuestro Equipo Médico</a>
+                </li>
+                <li><a href="pages/contacto.html">Contacto</a></li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="col-md-4 footer__contact-info">
+            <h4>Contacto</h4>
+            <p>Teléfono: (123) 456-7890</p>
+            <p>Email: contacto@hospitalcorazon.com</p>
+            <p>Dirección: Calle Ejemplo 123, Ciudad, País</p>
+          </div>
+
+          <div class="col-md-4 footer__social-media">
+            <h4>Síguenos</h4>
+            <a href="https://www.facebook.com/hospitalcorazon" target="_blank"
+              >Facebook</a
+            ><br />
+            <a href="https://www.twitter.com/hospitalcorazon" target="_blank"
+              >Twitter</a
+            ><br />
+            <a href="https://www.instagram.com/hospitalcorazon" target="_blank"
+              >Instagram</a
+            >
+          </div>
+        </div>
+
+        <div class="footer__footer-bottom text-center mt-4">
+          <p>
+            &copy; 2024 Hospital del Corazón - Todos los derechos reservados.
+          </p>
+        </div>
+      </footer>
     </main>
-
-    <footer>
-      <div class="footer__content">
-        <h3>Hospital del Corazón</h3>
-        <div class="footer__logo">
-          <ul class="footer__enlaces">
-            <li>
-              <a href="pages/equipo-medico.html">Nuestro Equipo Médico</a>
-            </li>
-            <li><a href="pages/contacto.html">Contacto</a></li>
-          </ul>
-        </div>
-
-        <div class="footer__contact-info">
-          <h4>Contacto</h4>
-          <p>Teléfono: (123) 456-7890</p>
-          <p>Email: contacto@hospitalcorazon.com</p>
-          <p>Dirección: Calle Ejemplo 123, Ciudad, País</p>
-        </div>
-
-        <div class="footer__social-media">
-          <h4>Síguenos</h4>
-          <a href="https://www.facebook.com/hospitalcorazon" target="_blank"
-            >Facebook</a
-          >
-          <a href="https://www.twitter.com/hospitalcorazon" target="_blank"
-            >Twitter</a
-          >
-          <a href="https://www.instagram.com/hospitalcorazon" target="_blank"
-            >Instagram</a
-          >
-        </div>
-      </div>
-      <div class="footer__footer-bottom">
-        <p>&copy; 2024 Hospital del Corazón - Todos los derechos reservados.</p>
-      </div>
-    </footer>
   </body>
 </html>
