--- a/pages/equipo-medico.html
+++ b/pages/equipo-medico.html
@@ -58,6 +58,23 @@
       <div class="row g-2 equipo">
         <div class="col-12 col-md-6 equipo__card">
           <img
+            src="../assets/img/equipo-medico/equipo-2.jpg"
+            alt="Dra. María López"
+          />
+          <div class="equipo__infor" id="doctor-info">
+            <!-- <h3>Dr. Ana Pérez</h3>
+            <p><strong>Especialidad:</strong> Cirugía Cardiovascular</p>
+            <p>
+              La Dra. López es experta en procedimientos quirúrgicos complejos y
+              cuenta con una trayectoria destacada en el tratamiento de
+              condiciones cardíacas críticas. Su enfoque compasivo y meticuloso
+              ha transformado la vida de muchos pacientes.
+            </p> -->
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 equipo__card">
+          <img
             src="../assets/img/equipo-medico/equipo-1.jpg"
             alt="Dr. Juan Pérez"
           />
@@ -69,40 +86,6 @@
               de enfermedades cardíacas, el Dr. Pérez se especializa en
               intervenciones mínimamente invasivas y es un defensor del enfoque
               preventivo en la salud cardiovascular.
-            </p>
-          </div>
-        </div>
-
-        <div class="col-12 col-md-6 equipo__card">
-          <img
-            src="../assets/img/equipo-medico/equipo-2.jpg"
-            alt="Dra. María López"
-          />
-          <div class="equipo__infor">
-            <h3>Dra. María López</h3>
-            <p><strong>Especialidad:</strong> Cirugía Cardiovascular</p>
-            <p>
-              La Dra. López es experta en procedimientos quirúrgicos complejos y
-              cuenta con una trayectoria destacada en el tratamiento de
-              condiciones cardíacas críticas. Su enfoque compasivo y meticuloso
-              ha transformado la vida de muchos pacientes.
-            </p>
-          </div>
-        </div>
-
-        <div class="col-12 col-md-6 equipo__card">
-          <img
-            src="../assets/img/equipo-medico/equipo-3.jpg"
-            alt="Dr. Carlos Sánchez"
-          />
-          <div class="equipo__infor">
-            <h3>Dra. Ana Torres</h3>
-            <p><strong>Especialidad:</strong> Medicina Interna</p>
-            <p>
-              La Dra. Torres combina su experiencia en medicina interna con un
-              enfoque integral hacia la salud cardiovascular, promoviendo
-              estilos de vida saludables y un tratamiento holístico para sus
-              pacientes.
             </p>
           </div>
         </div>
@@ -124,7 +107,25 @@
             </p>
           </div>
         </div>
+
+        <div class="col-12 col-md-6 equipo__card">
+          <img
+            src="../assets/img/equipo-medico/equipo-3.jpg"
+            alt="Dr. Carlos Sánchez"
+          />
+          <div class="equipo__infor">
+            <h3>Dra. Ana Torres</h3>
+            <p><strong>Especialidad:</strong> Medicina Interna</p>
+            <p>
+              La Dra. Torres combina su experiencia en medicina interna con un
+              enfoque integral hacia la salud cardiovascular, promoviendo estilos
+              de vida saludables y un tratamiento holístico para sus pacientes.
+            </p>
+          </div>
+        </div>
       </div>
+
+     
 
       <footer>
         <div class="row footer__content">
@@ -168,6 +169,13 @@
         </div>
       </footer>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+
+    <script src="doctores.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
